Adicionado estilos ao nome, background, descricao e algumas habilidades

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="name">
         <h1>Guilherme Hermenegildo Junior</h1>
     </div>
 
@@ -21,25 +22,29 @@
         </ol>
     </div>  
 
-    <div id="imagem"><img id="GHJ" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande">
-    </div>
-
-    <div id="description">
-        <p>Bom dia! Meu nome é <strong>Guilherme Hermenegildo Junior</strong>, tenho <em>28 anos</em>, a moro em Medianeira no Paraná, sou Brasileiro. Atualmente estudo na <strong>Trybe</strong>, escola de programação. Sou formado em <strong>Engenharia Elétrica pela UFPR</strong>. Meu grande objetivo ao programar é conseguir <em>melhorar a vida das pessoas</em> de alguma forma.</p>
+    <div class="foto-description">
+        <div id="imagem" class="imagem"><img id="GHJ" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande">
+        </div>
+        <div id="description" class="description">
+            <p>Bom dia! Meu nome é <strong>Guilherme Hermenegildo Junior</strong>, tenho <em>28 anos</em>, a moro em <span class="locality">Medianeira no Paraná</span>, sou <span class="nationality-green">B</span><span class="nationality-yellow">r</span><span class="nationality-green">a</span><span class="nationality-yellow">s</span><span class="nationality-green">i</span><span class="nationality-yellow">l</span><span class="nationality-green">e</span><span class="nationality-yellow">i</span><span class="nationality-green">r</span><span class="nationality-yellow">o</span>. Atualmente estudo na <strong class="trybe">Trybe</strong>, escola de programação. Sou formado em <strong>Engenharia Elétrica pela UFPR</strong>. Meu grande objetivo ao programar é conseguir <em>melhorar a vida das pessoas</em> de alguma forma.</p>
+        </div>
     </div>
 
     <div id="skills">
-        <p> <em>Minhas Habilidades</em></p>
+        <p class="skills"> <em>Minhas Habilidades</em></p>
         <ul>
-            <li><strong>Aprendizado Rápido</strong></li>
-            <li>Línguas: Fluente em inglês e português, boa compreensão e leitura de espanhol</li>
-            <li>Pacote Office</li>
-            <li>HTML, CSS, JavaScript básicos</li>
-            <li>GitHub</li>
-            <li>Ubunto e Windows</li>
-            <li>Boa Comunicação pessoal</li>
-            <li>Mestre no TFT</li>
-            <li>Muita Paciência</li>
+            <li class="fastlearning"><strong>Aprendizado Rápido</strong></li>
+            <li class="languages">Línguas: Fluente em inglês e português, boa compreensão e leitura de espanhol</li>
+            <li class="office">Pacote Office</li>
+            <li class="html">HTML</li>
+            <li class="css">CSS</li>
+            <li class="javascript">JavaScript</li>
+            <li class="github"><a href="https://github.com/guilhermehjunior" target="_blank">GitHub</a></li>
+            <li class="so">Ubuntu e Windows</li>
+            <li class="comunication">Boa Comunicação pessoal</li>
+            <li class="tft"> Mestre no TFT</li>
+            <li class="eletric">Instalações Elétrica</li>
+            <li class="patience">Muita Paciência</li>
         </ul>
     </div>
 
