Adicionando as mudancas requisitadas para o PortifolioWeb na aula 3.2 do curso Trybe

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="imagem" class="imagem"><img id="GHJ" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande">
         </div>
         <div id="description" class="description">
-            <p>Bom dia! Meu nome é <strong>Guilherme Hermenegildo Junior</strong>, tenho <em>28 anos</em>, a moro em <span class="locality">Medianeira no Paraná</span>, sou <span class="nationality-green">B</span><span class="nationality-yellow">r</span><span class="nationality-green">a</span><span class="nationality-yellow">s</span><span class="nationality-green">i</span><span class="nationality-yellow">l</span><span class="nationality-green">e</span><span class="nationality-yellow">i</span><span class="nationality-green">r</span><span class="nationality-yellow">o</span>. Atualmente estudo na <strong class="trybe">Trybe</strong>, escola de programação. Sou formado em <strong>Engenharia Elétrica pela UFPR</strong>. Meu grande objetivo ao programar é conseguir <em>melhorar a vida das pessoas</em> de alguma forma.</p>
+            <p>Bom dia! Meu nome é <strong>Guilherme Hermenegildo Junior</strong>, tenho <em>28 anos</em>, a moro em <span class="locality">Medianeira no Paraná</span>, sou <span class="nationality-green">B</span><span class="nationality-yellow">r</span><span class="nationality-green">a</span><span class="nationality-yellow">s</span><span class="nationality-green">i</span><span class="nationality-yellow">l</span><span class="nationality-green">e</span><span class="nationality-yellow">i</span><span class="nationality-green">r</span><span class="nationality-yellow">o</span>. Atualmente estudo na <a href="https://www.betrybe.com/" target="_blank" class="trybe">Trybe</a>, escola de programação. Sou formado em <strong>Engenharia Elétrica pela UFPR</strong>. Meu grande objetivo ao programar é conseguir <em>melhorar a vida das pessoas</em> de alguma forma.</p>
         </div>
     </div>
 
@@ -35,25 +35,26 @@
         <ul>
             <li class="fastlearning"><strong>Aprendizado Rápido</strong></li>
             <li class="languages">Línguas: Fluente em inglês e português, boa compreensão e leitura de espanhol</li>
-            <li class="office">Pacote Office</li>
             <li class="html">HTML</li>
             <li class="css">CSS</li>
             <li class="javascript">JavaScript</li>
             <li class="github"><a href="https://github.com/guilhermehjunior" target="_blank">GitHub</a></li>
-            <li class="so">Ubuntu e Windows</li>
-            <li class="comunication">Boa Comunicação pessoal</li>
-            <li class="tft"> Mestre no TFT</li>
-            <li class="eletric">Instalações Elétrica</li>
             <li class="patience">Muita Paciência</li>
+            <li class="communication">Boa Comunicação pessoal</li>
+            <li class="eletric">Instalações Elétrica</li>
+            <li class="office">Pacote Office</li>
+            <li class="so">Ubuntu e Windows</li>
+            <li class="tft"> Mestre no TFT</li>
+            
         </ul>
     </div>
 
     <div id="links">
-        <p><a href="#GHJ">Voltar para minha foto.</a></p>
-        <p>Link para o site do <a href="https://jovemnerd.com.br/" target="_blank">Jovem Nerd</a>, onde é possível se manter atualizado nas notícias nerds.</p>
+        <p><a href="#GHJ" target="_self" class="voltarFoto">Voltar para minha foto.</a></p>
+        <p>Link para o site do <a href="https://www.cursoemvideo.com/" target="_blank" class="cursoemvideo">Curso em Video</a>, onde é possível assistir diversos cursos de programação e de forma gratuita.</p>
     </div>
 
-    <div id="linkedin"> <p>Caso tenha mais interesse em mim, <a href="https://www.linkedin.com/in/guilherme-hermenegildo-junior/" target="_blank">clique aqui para ir para meu Linkedin</a></p> </div>
+    <div id="linkedin"> <p>Caso tenha mais interesse em mim, <a href="https://www.linkedin.com/in/guilherme-hermenegildo-junior/" target="_blank" class="linkedin">Linkedin</a></p> </div>
 
 
 </body>
