--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
     </div>
 
     <div id="indice"><p>Indíce: </p>
-        <ol> 
+        <ol class="lista-indice"> 
             <li><a href="#imagem">Foto</a></li>
             <li><a href="#description">Descrição</a></li>
             <li><a href="#skills">Habilidades</a></li>
             <li><a href="#links">Links Internos e Externos</a></li>
-            <li><a href="#linkedin">Linkedin</a></li>
         </ol>
     </div>  
 
     <div class="foto-description">
-        <div id="imagem" class="imagem"><img id="GHJ" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande">
+        <div id="imagem"><img id="GHJ" class="imagem" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande">
         </div>
         <div id="description" class="description">
             <p>Bom dia! Meu nome é <strong>Guilherme Hermenegildo Junior</strong>, tenho <em>28 anos</em>, a moro em <span class="locality">Medianeira no Paraná</span>, sou <span class="nationality-green">B</span><span class="nationality-yellow">r</span><span class="nationality-green">a</span><span class="nationality-yellow">s</span><span class="nationality-green">i</span><span class="nationality-yellow">l</span><span class="nationality-green">e</span><span class="nationality-yellow">i</span><span class="nationality-green">r</span><span class="nationality-yellow">o</span>. Atualmente estudo na <a href="https://www.betrybe.com/" target="_blank" class="trybe">Trybe</a>, escola de programação. Sou formado em <strong>Engenharia Elétrica pela UFPR</strong>. Meu grande objetivo ao programar é conseguir <em>melhorar a vida das pessoas</em> de alguma forma.</p>
-        </div>
+        </div> 
     </div>
 
     <div id="skills">
@@ -50,11 +49,12 @@
     </div>
 
     <div id="links">
-        <p><a href="#GHJ" target="_self" class="voltarFoto">Voltar para minha foto.</a></p>
-        <p>Link para o site do <a href="https://www.cursoemvideo.com/" target="_blank" class="cursoemvideo">Curso em Video</a>, onde é possível assistir diversos cursos de programação e de forma gratuita.</p>
+        <p><a href="https://www.linkedin.com/in/guilherme-hermenegildo-junior/" target="_blank" class="linkedin">Linkedin</a></p>
+        <p><a  class= "github-link"href="https://github.com/guilhermehjunior" target="_blank">GitHub</a></p>
+        <p><a href="https://www.cursoemvideo.com/" target="_blank" class="cursoemvideo">Curso em Video</a></p>
     </div>
 
-    <div id="linkedin"> <p>Caso tenha mais interesse em mim, <a href="https://www.linkedin.com/in/guilherme-hermenegildo-junior/" target="_blank" class="linkedin">Linkedin</a></p> </div>
+    <p><a href="#GHJ" target="_self" class="voltarFoto">Voltar para foto</a></p>
 
 
 </body>
