centralizando os itens da pagina

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     </div>  
 
     <div class="foto-description">
-        <div id="imagem"><img id="GHJ" class="imagem" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande">
-        </div>
+        <div class="foto" ><img id="GHJ" class="imagem" src="./images/eu.jpg"  width= "300px" alt="Foto de Guilherme Hermenegildo Junior usando fones e com cabelo grande"></div>
         <div id="description" class="description">
             <p>Bom dia! Meu nome é <strong>Guilherme Hermenegildo Junior</strong>, tenho <em>28 anos</em>, a moro em <span class="locality">Medianeira no Paraná</span>, sou <span class="nationality-green">B</span><span class="nationality-yellow">r</span><span class="nationality-green">a</span><span class="nationality-yellow">s</span><span class="nationality-green">i</span><span class="nationality-yellow">l</span><span class="nationality-green">e</span><span class="nationality-yellow">i</span><span class="nationality-green">r</span><span class="nationality-yellow">o</span>. Atualmente estudo na <a href="https://www.betrybe.com/" target="_blank" class="trybe">Trybe</a>, escola de programação. Sou formado em <strong>Engenharia Elétrica pela UFPR</strong>. Meu grande objetivo ao programar é conseguir <em>melhorar a vida das pessoas</em> de alguma forma.</p>
         </div> 
@@ -54,7 +53,7 @@
         <p><a href="https://www.cursoemvideo.com/" target="_blank" class="cursoemvideo">Curso em Video</a></p>
     </div>
 
-    <p><a href="#GHJ" target="_self" class="voltarFoto">Voltar para foto</a></p>
+    <p class="paragrafovoltarFoto"><a href="#GHJ" target="_self" class="voltarFoto">Voltar para foto</a></p>
 
 
 </body>
